<resources>
    <string name="app_name">MemIt</string>
    <string name="action_settings">Settings</string>

    <string name="menu_item_drill">Play</string>
    <string name="menu_item_books">My books</string>
    <string name="menu_item_repository">Online repository</string>
    <string name="menu_item_setting">Settings</string>
    <string name="menu_item_help">Help</string>

    <string name="permission_description_read_devices">Allows apps to read device information</string>
    <string name="permission_description_write_devices">Allows apps to write device information</string>

    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading..</string>

    <!-- BOOK FORM -->

    <string name="book_add_new">Add a new textbook</string>
    <string name="book_form_name">Name of your textbook</string>
    <string name="book_form_name_exists_error">The book with given name already exists</string>
    <string name="book_level">Language level</string>
    <string name="book_edit_existing">Edit textbook</string>
    <string name="book_edit">Edit</string>
    <string name="book_remove">Remove</string>
    <string name="book_removed">The book has been removed</string>
    <string name="book_saved">Saved</string>
    <string name="book_list">Your textbooks</string>
    <string name="book_list_empty">No book found.</string>
    <string name="book_item_info">Lectures: %1$d Cards: %2$d Activated %3$d</string>
    <string name="language_of_questions">Language of questions</string>
    <string name="language_of_answers">Language of answers</string>

    <!-- LECTURE FORM -->

    <string name="lecture_list">Lectures</string>
    <string name="lecture_add_new">Add a new lecture</string>
    <string name="lecture_edit">Edit lecture</string>
    <string name="lecutre_item_info">Cards: %1$d Activated %2$d</string>
    <string name="lecutre_list_empty">The textbook does not contain any lecture</string>
    <string name="lecture_form_name">Name of the lecture</string>

    <!-- WORD -->
    <string name="word_add_new">Add word</string>
    <string name="word_list_empty">The lecture does not contain any cards</string>
    <string name="word_add_question_unassigned">Type a question</string>
    <string name="word_add_answer_unassigned">Type an question</string>
    <string name="word_add_question">Your question in %1$s</string>
    <string name="word_add_answer">Your answer in %1$s</string>
    <string name="word_required">Can not be empty</string>
    <string name="word_edit_new">Edit word</string>

    <!-- VALIDATION -->
    <string name="error_string_short">Must have at least %1$d characters</string>

    <!-- LANGUAGES -->

    <string name="lang_BG">Bulgarian</string>
    <string name="lang_ZH">Chinese</string>
    <string name="lang_HR">Croatian</string>
    <string name="lang_CS">Czech</string>
    <string name="lang_DA">Danish</string>
    <string name="lang_NL">Dutch</string>
    <string name="lang_EN">English</string>
    <string name="lang_FI">Finnish</string>
    <string name="lang_FR">French</string>
    <string name="lang_DE">German</string>
    <string name="lang_EL">Greek</string>
    <string name="lang_HU">Hungarian</string>
    <string name="lang_IT">Italian</string>
    <string name="lang_NB">Norwegian</string>
    <string name="lang_PL">Polish</string>
    <string name="lang_PT">Protugese</string>
    <string name="lang_RO">Romanian</string>
    <string name="lang_RU">Russian</string>
    <string name="lang_SK">Slovakian</string>
    <string name="lang_SL">Slovenian</string>
    <string name="lang_ES">Spanish</string>
    <string name="lang_SV">Swedish</string>
    <string name="lang_TR">Turkish</string>

    <!-- LEVELS  -->

    <string name="level_A1">Beginner / Elementary</string>
    <string name="level_A2">Pre-Intermediate</string>
    <string name="level_B1">Intermediate</string>
    <string name="level_B2">Upper-intermediate</string>
    <string name="level_C1">Advanced</string>
    <string name="level_C2">Proficient</string>

    <string name="fa_icon_book" translatable="false">&#xf02d;</string>

    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="activateAll">Activate all</string>
    <string name="deactivateAll">Deactivate all</string>
    <string name="activated">Activated</string>
    <string name="deactivated">Deactivated</string>
    <string name="delete">Delete</string>
    <string name="deleteAll">Delete all</string>
    <string name="deletedAll">All cards were deleted</string>
    <string name="undo">UNDO</string>
    <string name="edit">Edit</string>
    <string name="importWords">Import</string>

    <!-- memit -->
    <string name="answerInputHit">Type the answer...</string>
    <string name="seen">Seen %dx</string>
    <string name="showAnswer">Show answer</string>
</resources>
