<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_lecture"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.memit.android.activity.word.AddWordActivity"
    tools:showIn="@layout/activity_word_add">

    <RelativeLayout
        android:id="@+id/lectureNameHolder"
        android:layout_width="match_parent"
        android:background="#EEEEEE"
        android:padding="8dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/lectureIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_view_module_black_24px"/>

        <TextView
            android:layout_toRightOf="@id/lectureIcon"
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginLeft="5dp"
            android:text="@string/loading"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_below="@id/lectureNameHolder"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/form"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:id="@+id/wordQuestionInputWrapper"
            style="@style/textareaWrapp">

            <EditText
                style="@style/textarea"
                android:id="@+id/wordQuestionInput"
                android:hint="@string/word_add_question_unassigned"
                />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/wordAnswerInputWrapper"
            android:layout_below="@id/wordQuestionInputWrapper"
            style="@style/textareaWrapp">

            <EditText
                style="@style/textarea"
                android:hint="@string/word_add_answer_unassigned"
                android:id="@+id/wordAnswerInput"
                />
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_below="@id/wordAnswerInputWrapper"
            android:layout_marginTop="15dp"
            style="@style/formButtonWrapp">

            <Button
                android:id="@+id/wordCancelBtn"
                style="@style/cancelBtn"
                android:text="@string/cancel"
                />

            <Button
                android:id="@+id/wordSaveBtn"
                style="@style/saveBtn"
                android:text="@string/save"
                />
        </LinearLayout>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>

